--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: S-Graffito
 logo: "images/color_logo_transparent.png?raw=true"
+org-logo : "images/DSG-Logo-horiz.png?raw=true"
 
 theme: jekyll-theme-minimal
