--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: S-Graffito
+S-Graffito Streaming Graph Processing Project
 logo: "images/logo.png?raw=true"
 org-logo : "images/DSG-Logo_horiz.png?raw=true"
 
